# CRM

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.in  test_main.http
alembic/: env.py
alembic/versions/: 3af7a3ad894d_add_scheduling_and_calendar_tables.py  6173f06a9d65_add_email_intakes_table.py
app/: config.py  database.py  main.py  settings.py
app/adapters/inbound/webhooks/: generic_parser.py  mailgun_parser.py  sendgrid_parser.py
app/adapters/messaging/: stub_event_bus.py
app/adapters/outbound/ai/: llm_intake_engine.py
app/adapters/outbound/crm/: context_lookup.py
app/adapters/outbound/email/: normalizer.py
app/api/dependencies/: intake_deps.py
app/api/routers/: __init__.py  appointments.py  contacts.py  email_intake.py  health.py  staff.py  webhooks.py
app/api/schemas/: appointment.py  contact.py  email_intake.py  staff_availability.py
app/core/domain/: events.py
app/models/: __init__.py  appointment.py  contact.py  reminder.py  staff.py  staff_availability.py
app/routers/: appointments.py  contacts.py  health.py  staff.py
app/schemas/: appointment.py  staff.py  staff_availability.py
docs/: BIG_PICTURE.md  C4.md  Email_Intake.md  Email_Intake_Component.md  architecture.md
tests/: conftest.py  test_appointments.py  test_main.py  test_staff.py
tests/integration/: test_email_intake_api.py  test_webhook_endpoints.py
tests/unit/domain/: test_intake_result.py  test_normalized_email.py
tests/unit/use_cases/: test_process_inbound_email.py  test_submit_user_decision.py
(+28 files in other folders)
