[project]
name = "crm"
version = "0.1.0"
description = "CRM + AI Assistant for small offices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.2.1",
    "aiosqlite>=0.19.0",
    "greenlet>=3.3.0",
    # Email Intake - Phase 4 dependencies
    "openai>=1.57.4",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
